# actionsHelper

./: .gitignore  CMakeLists.txt  README.md
include/: actionsHelper.h  actionsHelperUI.h  dataObject.h  ncursesUI.h  qtUI.h  quark.h  shortcutsHelper.h  shortcutsUI.h
include/json/: json.h
include/simstring/: .measure.h.swp  simstring.h
ressources/appList/: vim.json
ressources/appList/git/: actions.json
ressources/appList/help/: actions.json  database.db  database.db.28.cdb  database.db.35.cdb  database.db.41.cdb  database.db.46.cdb  database.db.47.cdb  database.db.54.cdb
ressources/appList/i3/: actions.json  database.db
ressources/appList/linux/: actions.json
ressources/appList/ranger/: actions.json
ressources/appList/vim/: actions.json  database.db  database.db.13.cdb  database.db.15.cdb  database.db.16.cdb  database.db.25.cdb  database.db.28.cdb  database.db.31.cdb  database.db.40.cdb  database.db.42.cdb  database.db.58.cdb  database.db.88.cdb
src/: CMakeLists.txt  actionsHelper.cpp  actionsHelperQT.qml  dataObject.cpp  getWindowName.sh  jsoncpp.cpp  main.cpp  ncursesUI.cpp  qtUI.cpp  shortcutHelperQT.qml  shortcutsHelper.cpp  shortcutsHelperQT.qml
